--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,14 +3,14 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.17
 
-# Deep Learning - UPDATED VERSIONS
+# Deep Learning - Python 3.13 compatible
 torch==2.5.1
-torchvision==0.20.1
+torchvision==0.24.1
 transformers>=4.40.0
 timm==0.9.12
 
 # Image Processing
-pillow==10.4.0
+pillow==11.0.0
 opencv-python-headless==4.10.0.84
 mediapipe==0.10.14
 piexif==1.1.3
@@ -24,5 +24,5 @@ librosa==0.10.2
 soundfile==0.12.1
 
 # Scientific Computing
-numpy==1.26.4
+numpy==2.2.1
 scipy==1.14.1
