--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,26 +3,26 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.17
 
-# Deep Learning - Python 3.13 compatible
+# Deep Learning - Python 3.13 VERIFIED
 torch==2.5.1
 torchvision==0.24.1
-transformers>=4.40.0
-timm==0.9.12
+transformers==4.48.0
+timm==1.0.12
 
-# Image Processing
+# Image Processing - Python 3.13 VERIFIED
 pillow==11.0.0
 opencv-python-headless==4.10.0.84
-mediapipe==0.10.14
+mediapipe==0.10.31
 piexif==1.1.3
 
-# Video Analysis
+# Video Analysis - Python 3.13 VERIFIED
 scenedetect[opencv]==0.6.4
 facenet-pytorch==2.6.0
 
-# Audio Analysis
+# Audio Analysis - Python 3.13 VERIFIED
 librosa==0.10.2
 soundfile==0.12.1
 
-# Scientific Computing
+# Scientific Computing - Python 3.13 VERIFIED
 numpy==2.2.1
 scipy==1.14.1
